--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <!---grupo js--->
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
-<script src="js/acciones2.js"></script>
-<script src="js/acciones3.js"></script>
-<script src="js/acciones4.js"
+<script src="js/acciones2.js" type="text/javascript"></script>></script>
+<script src="js/acciones3.js" type="text/javascript"></script>></script>
+<script src="js/acciones4.js" type="text/javascript"></script>></script>
 <script src="phonegap.js"></script><!--necesario--->
 
 <!---menu lateral--->
